...
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_suspension_interval_add">Add suspension interval</string>
    <string name="text_dialog_suspension_interval_add_start">Start</string>
    <string name="text_dialog_suspension_interval_add_end">End</string>
    <string name="label_dialog_suspension_interval_add_ok">@android:string/ok</string>
    <string name="label_dialog_suspension_interval_add_cancel">@android:string/cancel</string>
</resources>
